[package]
name = "docker-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
basic-toml = "0.1.7"
nonempty = { version = "0.9.0", features = ["serde", "serialize"] }
package-version = { git = "https://github.com/LuckyTurtleDev/package-version.git", version = "0.1.0" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
